<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.gematik.ti20.simsvc.server</groupId>
    <artifactId>popp-token-generator</artifactId>
    <version>1.0.0</version>

    <name>Popp Token Generator</name>
    <description>Generator for Popp mock tokens</description>
    <inceptionYear>2025</inceptionYear>

    <properties>
        <start-class>de.gematik.ti20.simsvc.server.Main</start-class>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <version.java>17</version.java>
        <version.maven.source>3.3.0</version.maven.source>
        <version.maven.compiler>3.12.1</version.maven.compiler>
        <version.maven.javadoc>3.6.3</version.maven.javadoc>
        <version.maven.failsafe>3.2.5</version.maven.failsafe>
        <version.maven.surefire>3.2.5</version.maven.surefire>

        <version.annotation>3.0.0</version.annotation>
        <version.lombok>1.18.36</version.lombok>
        <version.slf4j-api>2.0.12</version.slf4j-api>
        <version.logback>1.5.3</version.logback>
        <version.jose4j>0.9.4</version.jose4j>
        <version.jackson.databind>2.18.2</version.jackson.databind>
        <version.maven.jacoco>0.8.12</version.maven.jacoco>
        <mycila.license-maven-plugin.version>5.0.0</mycila.license-maven-plugin.version>

        <version.springboot>3.5.6</version.springboot>
        <version.springdoc>2.8.13</version.springdoc>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <skip.unittests>false</skip.unittests>
        <skip.inttests>true</skip.inttests>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${version.springboot}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
            <version>${version.springboot}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
            <version>${version.springboot}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
            <version>${version.springboot}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${version.slf4j-api}</version>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${version.springdoc}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <version>${version.lombok}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${version.jackson.databind}</version>
        </dependency>

        <dependency>
            <groupId>org.bitbucket.b_c</groupId>
            <artifactId>jose4j</artifactId>
            <version>${version.jose4j}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <version>${version.springboot}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${version.springboot}</version>
                <configuration>
                    <mainClass>${start-class}</mainClass>
                    <layout>JAR</layout>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- plugins required by gematik -->
            <plugin>
                <artifactId>jacoco-maven-plugin</artifactId>
                <groupId>org.jacoco</groupId>
                <version>${version.maven.jacoco}</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/coverage-reports/jacoco.exec
                            </destFile>
                            <propertyName>surefireJacocoAgent</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>pre-integration-test</id>
                        <goals>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                        <configuration>
                            <destFile>
                                ${project.build.directory}/coverage-reports/jacoco-it.exec
                            </destFile>
                            <propertyName>failsafeJacocoAgent</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${project.build.directory}/coverage-reports/jacoco.exec
                            </dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco
                            </outputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-integration-test</id>
                        <goals>
                            <goal>report-integration</goal>
                        </goals>
                        <configuration>
                            <dataFile>
                                ${project.build.directory}/coverage-reports/jacoco-it.exec
                            </dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-it
                            </outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>sonar-maven-plugin</artifactId>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <version>4.0.0.4121</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${version.maven.source}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${version.maven.javadoc}</version>
                <configuration>
                    <doclint>none</doclint>
                    <includes>
                        <include>src/main/java/**</include>
                        <include>target/generated-sources/jsonschema2pojo/**</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.maven.surefire}</version>
                <configuration>
                    <argLine>
                        ${surefireJacocoAgent}
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        -Dfile.encoding=${project.build.sourceEncoding}
                    </argLine>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>org.sonar.java.jacoco.JUnitListener</value>
                        </property>
                    </properties>
                    <excludedGroups>${excludedTestGroups}</excludedGroups>
                    <excludes>
                        <exclude>**/integrationtest/Test*.java</exclude>
                    </excludes>
                    <skip>${skipSurefire}</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${mycila.license-maven-plugin.version}</version>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <header>license.header.txt</header>
                            <includes>
                                <include>**/target/**</include>
                                <include>**/src/**</include>
                                <include>**/target/generated-*/**</include>
                            </includes>
                            <excludes>
                                <exclude>**/*.properties</exclude>
                                <exclude>**/*.yaml</exclude>
                                <exclude>**/*.yml</exclude>
                                <exclude>**/*.xml</exclude>
                                <exclude>**/*.txt</exclude>
                                <exclude>**/*.cert</exclude>
                                <exclude>**/*.tgr</exclude>
                                <exclude>**/*.mjs</exclude>
                                <exclude>**/*.bks</exclude>
                                <exclude>**/*.crt</exclude>
                                <exclude>**/*.browserslistrc</exclude>
                                <exclude>**/*.factories</exclude>
                                <exclude>**/*.feature</exclude>
                                <exclude>**/*.jtmpl</exclude>
                                <exclude>**/*.ansi</exclude>
                                <exclude>**/*.curl</exclude>
                                <exclude>**/*.map</exclude>
                                <exclude>**/*.env</exclude>
                                <exclude>**/*.pem</exclude>
                                <exclude>**/*.eml</exclude>
                                <exclude>**/*.bin</exclude>
                                <exclude>**/*.b64</exclude>
                                <exclude>**/*.p8</exclude>
                                <exclude>**/*.encrypted</exclude>
                                <exclude>**/*.base64</exclude>
                                <exclude>**/*.pkcs8</exclude>
                                <exclude>**/*.conf</exclude>
                                <exclude>**/*.key</exclude>
                                <exclude>**/dist/assets/*</exclude>
                                <exclude>**/bootstrap.min.css</exclude>
                                <exclude>**/bootstrap.bundle.min.js</exclude>
                            </excludes>
                            <useDefaultExcludes>true</useDefaultExcludes>
                        </licenseSet>
                    </licenseSets>
                    <skipExistingHeaders>true</skipExistingHeaders>
                    <mapping>
                        <vue>XML_STYLE</vue>
                    </mapping>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.mycila</groupId>
                        <artifactId>license-maven-plugin-git</artifactId>
                        <!-- make sure you use the same version as license-maven-plugin -->
                        <version>${mycila.license-maven-plugin.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>license headers for sources</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>generate-sources</phase>
                    </execution>
                    <execution>
                        <id>license headers for test sources</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>generate-test-sources</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
    </profiles>
</project>
